--- a/projeto-demo/src/pages/resumo/Resumo.css
+++ b/projeto-demo/src/pages/resumo/Resumo.css
@@ -1,1 +1,72 @@
-﻿
+﻿#centralizar {
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+
+}
+
+#centralizar #dentro {
+    display: flex;
+    flex-direction: column;
+    width: 395px;
+    height: 318px;
+    border: 2px solid;
+}
+
+.resumovalor {
+    display: flex;
+    justify-content: space-between;
+}
+
+#centralizar #dentro #resumotitulo {
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin: 30px 0 40px 40px;
+
+}
+
+#centralizar #dentro .resumovalor .textovalor {
+    padding: 10px;
+    font-size: 0.8rem;
+    margin-left: 30px;
+    margin-right: 15px;
+
+}
+
+#centralizar #dentro .resumovalor .textovalorbold {
+    font-size: 0.9rem;
+    font-weight: 500;
+    margin: 30px 16.5px 40px 40px;
+
+}
+
+#centralizar #dentro #botaocompra {
+    border-radius: 8px;
+    background: #D973AB;
+    border: none;
+    outline: none;
+    
+
+}
+
+#centralizar #dentro #botaocompradiv {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 300px;
+    margin-left: 50px;
+    background-color: #D973AB;
+    padding: 15px;
+    border-radius: 8px;
+}
+
+#centralizar #dentro #botaocompradiv img{
+    background-color: #D973AB;
+    width: 16px;
+    height: 16px;
+}
+
+#centralizar #dentro #botaocompra a {
+    text-decoration: none;
+    color: whitesmoke;
+}
