--- a/projeto-demo/src/pages/body/Body.css
+++ b/projeto-demo/src/pages/body/Body.css
@@ -30,10 +30,19 @@
    justify-content: flex-start;
    width: 160px;
    height: 160px;
-   border: 2px solid red;
    border-bottom-left-radius: 30px;
    border-top-left-radius: 30px;
    background-image: url();
+   background-size: cover;
+}
+
+#teste #dentro #foto #foto-dentro {
+   border-bottom-left-radius: 30px;
+   border-top-left-radius: 30px;
+   width: 160px;
+   height: 156px;
+   background-size: cover;
+   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3YJj_OxtCai7IW1fvjQWb7LlLm_7z-yMuIw&usqp=CAU);
 }
 
 #teste #dentro #info-top {
