--- a/projeto-demo/src/pages/resumo/Resumo.css
+++ b/projeto-demo/src/pages/resumo/Resumo.css
@@ -9,8 +9,11 @@
     display: flex;
     flex-direction: column;
     width: 395px;
-    height: 318px;
-    border: 2px solid;
+    height: 338px;
+    border: 2px solid hsla(16, 78%, 76%, 0.30);
+    box-shadow: 0px 0px 36px 0px rgba(203, 95, 93, 0.59);
+    border-radius: 30px;
+    background: rgba(242, 173, 148, 0.10);
 }
 
 .resumovalor {
