--- a/projeto-demo/src/index.css
+++ b/projeto-demo/src/index.css
@@ -13,6 +13,7 @@ header,
 nav {
   font-family: 'Eczar', serif;
   font-family: 'Inter', sans-serif;
+  font-family: 'EB Garamond', serif;
 }
 
 body {
