--- a/projeto-demo/src/pages/body/Body.css
+++ b/projeto-demo/src/pages/body/Body.css
@@ -14,13 +14,58 @@
    margin-top: 50px;
 }
 
+@media(width < 850px){
+
+   section {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+   }
+
+
+   #teste {
+      width: 521px;
+      height: 160px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: start;
+      background-color: white;
+      border-radius: 30px;
+      margin-top: 50px;
+   }
+
+   #teste #dentro {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      flex-wrap: wrap;
+      width: 521px;
+      height: 160px;
+      outline: 3px solid hsla(16, 78%, 76%, 0.30);
+      box-shadow: 0px 0px 36px 0px rgba(203, 95, 93, 0.59);
+      border-radius: 30px;
+      background: rgba(242, 173, 148, 0.10);
+   }
+
+   #teste #dentro #info-top {
+      margin-top: 15px;
+      width: 22rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: start;
+   }
+}
+
 #teste #dentro {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    width: 821px;
    height: 160px;
-   border: 2px solid hsla(16, 78%, 76%, 0.30);
+   outline: 3px solid hsla(16, 78%, 76%, 0.30);
    box-shadow: 0px 0px 36px 0px rgba(203, 95, 93, 0.59);
    border-radius: 30px;
    background: rgba(242, 173, 148, 0.10);
@@ -37,10 +82,11 @@
 }
 
 #teste #dentro #foto #foto-dentro {
+   justify-content: center;
    border-bottom-left-radius: 30px;
    border-top-left-radius: 30px;
    width: 160px;
-   height: 156px;
+   height: 160px;
    background-size: cover;
    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3YJj_OxtCai7IW1fvjQWb7LlLm_7z-yMuIw&usqp=CAU);
 }
