--- a/FrontEnd/src/pages/cadastro/Cadastro.css
+++ b/FrontEnd/src/pages/cadastro/Cadastro.css
@@ -1,8 +1,24 @@
-.fundoCadastro {
-    background-image: url("https://i.imgur.com/ZZFAmzo.jpg");
+.imagem {
+    background-image: url("/src/assets/img/atena2.jpeg");
     background-repeat: no-repeat;
     width: 100%;
-    min-height: 100vh;
+    min-height: 100%;
     background-size: cover;
     background-position: center;
-  }
+}
+
+.imagem-icone {
+  background-image: url("/src/assets/img/icon.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 30px;
+
+}
+
+.usuario:focus {
+  box-shadow: 0px 3px 5px 0px rgba(203, 95, 93, 0.59);
+  outline: none;
+
+}
