--- a/FrontEnd/src/pages/cadastro/Cadastro.css
+++ b/FrontEnd/src/pages/cadastro/Cadastro.css
@@ -14,11 +14,13 @@
   background-position: center;
   width: 100%;
   height: 30px;
-
 }
 
 .usuario:focus {
   box-shadow: 0px 3px 5px 0px rgba(203, 95, 93, 0.59);
   outline: none;
+}
 
+.primeiro-icone {
+  font-family: 'Inter', sans-serif;
 }
