--- a/FrontEnd/src/pages/login/Login.css
+++ b/FrontEnd/src/pages/login/Login.css
@@ -1,17 +1,23 @@
 .fundoLogin {
-    background-image: url("https://i.imgur.com/ZZFAmzo.jpg");
+    background-image: url("/src/assets/img/atena2.jpeg");
     background-repeat: no-repeat;
     min-height: 100vh;
     width: 100%;
     background-size: cover;
-    background-position: center;
+    transform: scaleX(-1)
 }
 
-#entrar{
+#entrar {
     width: 15rem;
     height: 3.5rem;
     flex-shrink: 0;
     border-radius: 0.5rem;
     background: #D973AB;
     color: #FFF;
+}
+
+.usuario2 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 0.8rem;
+    font-weight: 300;
 }
