--- a/FrontEnd/src/pages/Grid/Grid.css
+++ b/FrontEnd/src/pages/Grid/Grid.css
@@ -17,6 +17,10 @@
    ;
 }
 
+.padrao {
+   font-family: 'Inter', sans-serif;
+}
+
 .resumotitulo {
    grid-area: resumotitulo;
 }
@@ -27,6 +31,11 @@
 
 .resumo {
    grid-area: resumo;
+}
+
+hr.separador {
+   background-color: rgba(230, 230, 230, 0.70);
+   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset;
 }
 
 @media (width <=1250px) {
