--- a/FrontEnd/src/pages/cart/Carrinho.css
+++ b/FrontEnd/src/pages/cart/Carrinho.css
@@ -19,7 +19,10 @@
 .resumovalor {
     display: flex;
     flex-direction: column;
+}
 
+.padrao {
+    font-family: 'Inter', sans-serif;
 }
 
 #centralizar #dentro #resumotitulo {
