Sobre nós update

--- a/FrontEnd/src/pages/contato/Contato.css
+++ b/FrontEnd/src/pages/contato/Contato.css
@@ -5,7 +5,32 @@
    background: rgba(242, 173, 148, 0.10);
    display: flex;
    flex-direction: column;
-   width: 80%;
+   align-items: center; 
+   justify-content: center; 
+   width: 60%;
+   margin-top: 1.5rem; /* Margem no topo */
+
+ }
+
+ #caixahome2 h1{
+   font-family: 'Eczar', sans-serif;
+   justify-items: center;
+   text-align: center; /* Centraliza o texto horizontalmente */
+   margin-bottom: 2rem; /* Adiciona margem abaixo do texto */
+   font-size: 3rem;
+   margin-top: 2rem; /* Margem no topo */
+   font-weight: 600;
+ }
+
+ #caixahome2 p{
+   font-family: 'Inter', sans-serif;
+   margin-top: 0.1rem; /* Margem no topo */
+   margin-bottom: 1rem; /* Margem na parte inferior */
+   margin-right: 4rem; /* Margem à direita */
+   margin-left: 4rem; /* Margem à esquerda */
+   font-size: 1.2rem;
+   text-align: justify;
+   text-indent: 2rem;
  }
 
  @media screen and (width <= 1250px) {
@@ -13,5 +38,35 @@
       display: grid;
       grid-template-columns: repeat(1, minmax(0, 1fr));
    }
+}
+
+.atenafoto {
+   text-align: center;
+ }
+
+ .atenafoto img {
+   width: 30rem; /* Define a largura da imagem */
+   height: auto; /* Mantém a proporção da imagem */
+   border-radius: 1rem; /* Adiciona cantos arredondados à imagem */
+   margin-bottom: 2rem; /* Margem na parte inferior */
+ }
+
+ .responsividade {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+@media screen and (width <= 1235px) {
+  div.responsividade {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media screen and (width <= 810px) {
+  div.responsividade {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
 }
 
